Add time tracking page to the sidebar.
- Change data handling to handle how navigation bar works
- Delayed callback added to navigation bar for loading

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1148,6 +1148,7 @@ en:
       new_project: + New Project
       conversations: Conversations
       tasks: Tasks
+      time: Time tracking
       pages: Pages
       files: Files
       settings: Settings
