--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -291,7 +291,7 @@ en:
       tasks_for_tomorrow: "Tasks for tomorrow"
       tasks_for_next_two_weeks: "Tasks for next two weeks"
       tasks_without_a_due_date: "Tasks without a due date"
-      you_receive_this_message: "You received this message because you opted for it. You can disable it on your %{link}"
+      you_receive_this_message_html: "You received this message because you opted for it. You can disable it on your %{link}"
       settings_page: "settings page"
     text_styles:
       block_of_code: Paste your code indented (4 spaces or tabs) to paste it as a block of code.
@@ -1351,8 +1351,8 @@ en:
       subject: "Password retrieval for Teambox"
     notify:
       project: "Teambox Project:"
-      view_this_converation_online: "You can %{converation} to answer and attach files."
-      view_this_task_online: "You can %{link} to comment and attach files."
+      view_this_converation_online_html: "You can %{converation} to answer and attach files."
+      view_this_task_online_html: "You can %{link} to comment and attach files."
       converation: view this conversation online
       task_link: view this task online
       reply: "You can also reply to this email to post a reply in the conversation."
@@ -1363,9 +1363,9 @@ en:
       are_watching_task: 
         one: " is suscribed to this task, and will be notified of future replies."
         other: " are suscribed to this task, and will be notified of future replies."
-      stop_watching_link: "%{stop_watch} this thread to stop receiving email notifications."
+      stop_watching_link_html: "%{stop_watch} this thread to stop receiving email notifications."
       stop_watch: Stop watching
-      notification_settings_link: "You can change your %{settings_link} for further emails."
+      notification_settings_link_html: "You can change your %{settings_link} for further emails."
       settings_link: notification settings
       comment: "Comment on project's wall: "
       conversation: "Conversation:"
