--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,7 @@ en:
     gantt_chart: Gantt Chart
     signup: Sign up
     logged_out: You were logged out
+    loading: Loading...
   confirm:
     delete_task_list: Are you sure you want to delete this task list?
     delete_task: Are you sure you want to delete this task?
@@ -1488,9 +1489,10 @@ en:
     show_plans: Plans
 
   search:
-    placeholder: "Search all projects"
-    placeholder_in_project: "Search in project"
-    submit: Search
+    placeholder: Search all projects
+    close_search: Close search results
+    results_for: Results for %{search_terms}
+    found_results: Found %{length} results
     index:
       title: Searching in all projects
       title_in_project: "Searching in project: %{project}"
@@ -1498,7 +1500,6 @@ en:
       no_results:
         title: "We didn't find any results for '%{term}', sorry!"
         explain: "Try using more specific search terms to find more results."
-      report: "We found %{count} results for your search terms '%{term}'"
 
   number:
     # Used in number_with_delimiter()
