--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1648,20 +1648,22 @@ es:
       short: "%I:%M %p"
     pm: pm
   uploads: 
+    tooltip: Subir un archivo
     comment_upload_link: Adjunto
+    new: 
+      select_a_file: "Selecciona un archivo"
+      uploading: Subiendo...
+    index:
+      title: Archivos en el proyecto %{project}
+      new_file: "Subir un archivo"
+      cant_create: "No tienes permiso para subir archivos a este proyecto."
     form: 
+      max_upload_size: "El tamaño máximo de archivo es de %{mb} Mb"
       description_html: "Descripción <i>(opcional)</i>"
-      max_size: "El tamaño máximo de archivo son %{mb}"
+      max_size: "El tamaño del archivo no puede superar los %{mb} MB"
       presence: "No puedes subir un archivo vacío"
       select_file: "Seleccionar archivo"
       upload: "Subir archivo"
-    index: 
-      cant_create: "No tienes permiso para subir archivos a este proyecto."
-      max_upload_size: "El tamaño máximo de archivo es de %{mb} Mb"
-      new_file: "Subir un archivo"
-    new: 
-      select_a_file: "Selecciona un archivo"
-      uploading: Subiendo
     primer: 
       create_first: "Sube el primer archivo!"
       define1_html: "¿Alguna vez has tenido problemas al compartir un archivo? Con Teambox vuelve a ser fácil."
@@ -1670,7 +1672,6 @@ es:
       item1_html: "<b>Más capacidad</b>. Sube archivos de cualquier tamaño y olvida las limitaciones del email."
       item2_html: "<b>Versiones</b>. Sube versiones nuevas de archivos y guarda el histórico."
       item3_html: "<b>Siempre disponibles</b>. Los archivos permanecen en Teambox para que puedas consultarlos en el futuro."
-    tooltip: "Subir fichero"
     upload: 
       download: Descargar
       on_: en
