--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
     calendar: Calendar
     gantt_chart: Gantt Chart
     signup: Sign up
+    logged_out: You were logged out
   confirm:
     delete_task_list: Are you sure you want to delete this task list?
     delete_task: Are you sure you want to delete this task?
