Display more options beneath the frequently used on sidebar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1161,6 +1161,8 @@ en:
       organizations: Organizations
       show_all_organizations: "Manage organizations..."
       gantt_and_calendars: Gantts and calendars
+      show_more: Show more
+      show_less: Show less
     project_settings_navigation:
       general: General Settings
       picture: Project Picture
