--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -829,7 +829,7 @@ ru:
       hey: "Хей, %{user_name}!"
       log_in: "Войдите в Teambox сейчас!"
       plaintext_link: "Если это не сработало, скопируйте и вставьте эту ссылку в адресную строку браузера: "
-      problems: "Если у вас возникли проблемы, свяжитесь с нами по адресу %{support}"
+      problems_html: "Если у вас возникли проблемы, свяжитесь с нами по адресу %{support}"
       report_abuse: "Вы получили это письмо, потому что зарегистрировались в Teambox с адресом %{email}"
       subject: "Teambox для начинающих"
     forgot_password: 
@@ -866,7 +866,7 @@ ru:
       hey: "Хей, %{user_name}!"
       log_in: "Войдите в Teambox сейчас!"
       plaintext_link: "Если ссылка сверху не работает, скопируйте и вставьте следующий код в адресную строку браузера: "
-      problems: "Если у вас проблемы, свяжитесь с нами по адресу %{support}"
+      problems_html: "Если у вас проблемы, свяжитесь с нами по адресу %{support}"
       report_abuse: "Вы получили это письмо, потому что зарегистрировались в Teambox с адресом %{email}"
       subject: "Ваш пароль был успешно сброшен"
       successfully_reset: "Ваш пароль был успешно сброшен"
@@ -1938,7 +1938,7 @@ ru:
     unconfirmed_email: 
       follow_the_link_html: "Пожалуйста, <b>откройте письмо и пройдите по ссылке внутри него</b>, чтобы активировать аккаунт."
       invitation_sent_to_html: "Приглашение отправлено на <i>%{email}</i>, чтобы подтвердить вашу электронную почту."
-      problems: "Если у вас всё равно возникают проблемы, свяжитесь с нами по адресу %{support}"
+      problems_html: "Если у вас всё равно возникают проблемы, свяжитесь с нами по адресу %{support}"
       problems_title: Проблемы?
       resend: "Не нашли письмо? Нажмите <a href='%{link}'>here</a>, чтобы послать письмо с активацией заново."
       spam: "Убедитесь, что письмо не было помечено, как спам."
